[tool.poetry]
name = "pb-neuro"
version = "0.1.0"
description = ""
authors = ["vaclav"]
readme = "README.md"
packages = [{include = "pb_neuro"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.6.0"
fastapi = "^0.88.0"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
python-multipart = "^0.0.5"
pydantic = "^1.10.2"
openai = "^0.25.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
